2021-10-07  Niels Möller  <nisse@lysator.liu.se>

	* tune/speed.h (SPEED_ROUTINE_MPN_ADDADDMUL1_MSB0): New macro.
	* tune/common.c (speed_mpn_addaddmul_1msb0): New function.
	* tune/speed.c (routine): Add mpn_addaddmul_1msb0 to list.

2021-10-01 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gen-sieve.c: New file to generate a small presieved array.
	* primesieve.c (first_block_primesieve): Use the presieved array.
	* gmp-impl.h: #include output of gen-sieve.
	* Makefile.am: Add rules for gen-sieve and sieve_table.h.

	* mpn/x86_64/addaddmul_1msb0.asm: Support DOS ABI, reorder branches.

2021-09-26  Torbjörn Granlund  <tg@gmplib.org>

	* configure.ac (s390): Make sure to always include main asm directory.

	* longlong.h (umul_ppmm): Correct Risc V operand order.

2021-09-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/import.c: Use MPN_BSWAP_REVERSE, reorder branches.
	* mpz/inp_raw.c: Avoid bit size overflows.

2021-09-22  Torbjörn Granlund  <tg@gmplib.org>

	* config.sub: Update powerpc pattern.

	* longlong.h: Change tested predef for Risc V.

2021-08-21 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/primorial_ui.c: Simpler loop on sieved primes.
	* mpz/nextprime.c: Likewise.

2021-09-14  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/asm-defs.m4: Remove quotes around PIC_ALWAYS.  Reported by
	George Koehler.

2021-07-01  Niels Möller  <nisse@lysator.liu.se>

	* mpn/generic/div_qr_1n_pi1.c (mpn_div_qr_1n_pi1): New variants,
	DIV_QR_1N_METHOD 3 and 4.

	* tune/div_qr_1n_pi1_3.c: New file.
	* tune/div_qr_1n_pi1_4.c: New file.
	* tune/Makefile.am (libspeed_la_SOURCES): Add new files.
	* tune/div_qr_1_tune.c (__gmpn_div_qr_1n_pi1): Handle new values
	of div_qr_1n_pi1_method.
	* tune/common.c (speed_mpn_div_qr_1n_pi1_3)
	(speed_mpn_div_qr_1n_pi1_4): New functions.
	* tune/speed.c (routine): Add mpn_div_qr_1n_pi1_3 and
	mpn_div_qr_1n_pi1_3 to list.
	* tune/speed.h: Declare new functions.
	* tune/tuneup.c (tune_div_qr_1): Extend tuning of
	DIV_QR_1N_PI1_METHOD.
